--- a/app/src/main/res/layout/activity_description_acrivity.xml
+++ b/app/src/main/res/layout/activity_description_acrivity.xml
@@ -1,69 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.torey.projectlogin.view.Activity.DescriptionAcrivity">
-<ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/background"
+    android:weightSum="1">
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="100">
-
-
-        <ImageView
-            android:id="@+id/image_description"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="45"
-            android:contentDescription="@null"
-            android:scaleType="fitXY"
-            android:tint="#4D000000" />
-
-        <TextView
-            android:id="@+id/title_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:textAlignment="center"
-            android:textSize="28sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/intro_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Year :  "
                 android:layout_margin="10dp"
-                />
+                card_view:cardCornerRadius="6dp">
 
-            <TextView
-                android:id="@+id/year_description"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/image_product_des"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:scaleType="fitXY"
+
+                    />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
-        </LinearLayout>
-        <TextView
-            android:id="@+id/text_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+                android:layout_margin="2dp"
+                card_view:cardCornerRadius="6dp">
 
-    </LinearLayout>
-</ScrollView>
+                <TextView
+                    android:id="@+id/name_product_des"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="  NameProduct"
+                    android:textColor="#000000"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                card_view:cardCornerRadius="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/description_product_des"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="test" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="  วิธีใช้"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/how_to_use"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="test" />
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                card_view:cardCornerRadius="6dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="฿ "
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:id="@+id/price_product_des"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text=" / กล่อง ฟรี EMS"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/buy_product_des"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="250dp"
+                    android:background="@drawable/buyding_line"
+                    android:text=" Buy Now!"
+                    android:textColor="#FFFFFF" />
+            </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_delete_product"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ff0000"
+                android:text="delete Product"
+                android:layout_margin="5dp"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
