--- a/app/src/main/res/layout/custom_card_view.xml
+++ b/app/src/main/res/layout/custom_card_view.xml
@@ -32,15 +32,15 @@
                 android:scaleType="centerCrop" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/logo_image"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 >
 
                 <TextView
                     android:id="@+id/hero_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="190dp"
                     android:layout_height="wrap_content"
                      />
 
