--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -36,7 +37,17 @@
                 android:layout_height="wrap_content"
                 android:text="Admin"
                 android:background="@drawable/login_selector"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="40dp"
+
+                />
+
+            <Button
+                android:id="@+id/btn_insert_product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="insert product"
+                android:background="@drawable/login_selector"
+                android:layout_marginLeft="40dp"
 
                 />
 
